<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_label">Что использовать?</string>
    <string name="btn_room">Room</string>
    <string name="hint_name">Название</string>
    <string name="hint_text">Введите содержание заметки</string>
    <string name="btn_add">Добавить</string>
    <string name="btn_update">Обновить</string>
    <string name="title">Замтки</string>
    <string name="input_name">Необходимо ввести название</string>
    <string name="btn_firebase">Firebase</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="text_login">login</string>
    <string name="start_empty">Нет почты или пароля</string>
</resources>