<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.start.StartFragment">

    <TextView
        android:id="@+id/start_label"
        android:text="@string/start_label"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/text_bold"/>

    <Button
        android:id="@+id/btn_room"
        android:text="@string/btn_room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_label"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/btn" />

    <Button
        android:id="@+id/btn_firebase"
        android:text="@string/btn_firebase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_room"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/btn" />

    <EditText
        android:id="@+id/email"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_margin="@dimen/app_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_firebase"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:layout_margin="@dimen/app_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/text_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        style="@style/btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>